@@ -124,6 +124,7 @@
     <component>gst-plugins-ugly</component>
     <milestones>
       <milestone>HEAD</milestone>
+      <milestone>0.10.4</milestone>
       <milestone>0.10.3</milestone>
       <milestone>0.10.2</milestone>
       <milestone>0.10.1</milestone>
@@ -197,6 +198,7 @@
     <component>gst-ffmpeg</component>
     <milestones>
       <milestone>HEAD</milestone>
+      <milestone>0.10.2</milestone>
       <milestone>0.10.1</milestone>
       <milestone>0.10.0</milestone>
       <milestone>0.9.7</milestone>
