@@ -1,0 +1,168 @@
+<?xml version="1.0"?>
+<?xml-stylesheet href="../releases.xsl" type="text/xsl"?>
+<release>
+  <module>gst-plugins-ugly</module>
+  <module-fancy>GStreamer Ugly Plug-ins</module-fancy>
+  <name>Late Plane</name>
+  <version>0.10.3</version>
+
+  <intro>
+<p>
+The GStreamer team is proud to announce a new release
+in the 0.10.x stable series of the
+GStreamer Ugly Plug-ins.
+</p>
+<p>
+The 0.10.x series is a stable series targeted at end users.
+It is not API or ABI compatible with the stable 0.8.x series.
+It is, however, parallel installable with the 0.8.x series.
+</p>
+
+<p>
+<i>"When you have to shoot, shoot.  Don't talk."</i>
+</p>
+<p>
+There are times when the world needs a color between black and white.
+Quality code to match the good's, but two-timing, backstabbing and ready to
+sell your freedom down the river.  These plug-ins might have a patent noose
+around their neck, or a lock-up license, or any other problem that makes you
+think twice about shipping them.
+</p>
+<p>
+We don't call them ugly because we like them less.  Does a mother love her
+son less because he's not as pretty as the other ones ? No  - she commends
+him on his great personality.  These plug-ins are the life of the party.
+And we'll still step in and set them straight if you report any unacceptable
+behaviour - because there are two kinds of people in the world, my friend:
+those with a rope around their neck and the people who do the cutting.
+</p>
+<p>
+This module contains a set of plug-ins that have good quality and correct
+functionality, but distributing them might pose problems.  The license
+on either the plug-ins or the supporting libraries might not be how we'd
+like. The code might be widely known to present patent problems.
+Distributors should check if they want/can ship these plug-ins.
+</p>
+<p>
+Other modules containing plug-ins are:
+
+<dl>
+<dt>gst-plugins-base</dt>
+<dd>contains a basic set of well-supported plug-ins</dd>
+<dt>gst-plugins-good</dt>
+<dd>contains a set of well-supported plug-ins under our preferred license</dd>
+<dt>gst-plugins-bad</dt>
+<dd>contains a set of less supported plug-ins that haven't passed the
+    rigorous quality testing we expect</dd>
+</dl>
+
+</p>
+  </intro>
+  <features>
+    <feature>Parallel installability with 0.8.x series</feature>
+    <feature>Threadsafe design and API</feature>
+
+    <feature>dvdsubdec ported</feature>
+    <feature>fixes in mpeg2dec, asfdemux, mpegdemux, dvddemux, rmdemux, mpegparse, amrnb, mad, lame, a52dec</feature>
+
+  </features>
+
+  <applications>
+  </applications>
+
+    <contributors>
+	<person>Alex Lancaster</person>
+	<person>Christian Kirbach</person>
+	<person>Christophe Fergeau</person>
+	<person>Edward Hervey</person>
+	<person>Fabrizio Gennari</person>
+	<person>Jan Schmidt</person>
+	<person>Jens Granseuer</person>
+	<person>Julien MOUTTE</person>
+	<person>Jürg Billeter</person>
+	<person>Luca Ognibene</person>
+	<person>Michael Smith</person>
+	<person>Michal Benes</person>
+	<person>Tim-Philipp Müller</person>
+	<person>Wim Taymans</person>
+  </contributors>
+
+
+<!--
+  <api>
+    <additions>
+    </additions>
+    <depreciations>
+    </depreciations>
+  </api>
+-->
+
+  
+
+  <bugs>
+    <bug>
+      <id>300682</id>
+      <summary>[mpeg2dec] fails to play mpgtx -j joined files to the end</summary>
+    </bug>
+    <bug>
+      <id>317310</id>
+      <summary>Cant play swedish radio station &quot; P3 &quot; </summary>
+    </bug>
+    <bug>
+      <id>320022</id>
+      <summary>[asfdemux] borks on a particular mms asf stream</summary>
+    </bug>
+    <bug>
+      <id>323023</id>
+      <summary>[rmdemux] stops immediately if there are unlinked source ...</summary>
+    </bug>
+    <bug>
+      <id>326598</id>
+      <summary>[mpegstream] does not handle timestamp overflow correctly</summary>
+    </bug>
+    <bug>
+      <id>327356</id>
+      <summary>gst-plugins-ugly fails to build with GCC 4.1</summary>
+    </bug>
+    <bug>
+      <id>328957</id>
+      <summary>[mpegstream] fix build with gcc 2.95</summary>
+    </bug>
+    <bug>
+      <id>331588</id>
+      <summary>[rmdemux] realmedia files with AC3 don't work</summary>
+    </bug>
+    <bug>
+      <id>331838</id>
+      <summary>build problem caused by AS_LIBTOOL_TAGS([CXX])</summary>
+    </bug>
+    <bug>
+      <id>331842</id>
+      <summary>should check for mad and id3tag headers, not libs</summary>
+    </bug>
+    <bug>
+      <id>332796</id>
+      <summary>[asfdemux] cannot play an ASF stream</summary>
+    </bug>
+    <bug>
+      <id>333345</id>
+      <summary>[lame] fix some memory leaks</summary>
+    </bug>
+    <bug>
+      <id>333683</id>
+      <summary>[id3mux] patch to add support for GST_TAG_ALBUM_VOLUME_NU...</summary>
+    </bug>
+    <bug>
+      <id>334550</id>
+      <summary>Some ac3 files fail to play</summary>
+    </bug>
+    <bug>
+      <id>336097</id>
+      <summary>[asfdemux] live ASF streams do not work</summary>
+    </bug>
+    <bug>
+      <id>336387</id>
+      <summary>[mpegdemux] reffing null caps</summary>
+    </bug>
+  </bugs>
+</release>
